Cambio de nombre al icono

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                  <button id="sidebar-open-btn" class="text-gray-300 hover:text-white">
                     <i data-lucide="menu" class="w-6 h-6"></i>
                  </button>
-                 <h1 class="text-xl font-bold text-white">Finanzas EE</h1>
+                 <h1 class="text-xl font-bold text-white">Finanzas</h1>
                  <div></div> <!-- Spacer -->
             </header>
     
